Set channelCount and maxChannelCount correctly for OfflineAudioContext.

Set the channelCount and maxChannelCount to the number of
channels specified when creating the offline context.

Also, we were not correctly setting the channelCountMode to
"explicit", as required by the spec.

BUG=612483
TEST=offlineaudiocontext-constructor.html

Review-Url: https://codereview.chromium.org/2013623002
Cr-Commit-Position: refs/heads/master@{#396110}

Former-commit-id: 9beda74dbeb23068d79e76a2706cfcb65c8c5e6a